--- a/src/lt/banelis/aurelijus/dinosy/prototype/mainTest.form
+++ b/src/lt/banelis/aurelijus/dinosy/prototype/mainTest.form
@@ -421,8 +421,8 @@
                 <Container class="javax.swing.JPanel" name="jPanel4">
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                      <JTabbedPaneConstraints tabName="Okular">
-                        <Property name="tabTitle" type="java.lang.String" value="Okular"/>
+                      <JTabbedPaneConstraints tabName="Clipboard">
+                        <Property name="tabTitle" type="java.lang.String" value="Clipboard"/>
                       </JTabbedPaneConstraints>
                     </Constraint>
                   </Constraints>
